fix cards width on small devices

--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -73,7 +73,7 @@ render-comment {
             padding: 10px 10px;
             position: relative;
             margin: 10px;
-            max-width: 75%;
+            max-width: 70%;
       }
       
       .chat-bubble.left {
